Commit plan done for snake moving

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles1/main.css">
   <script src="./scripts/app.js" charset="utf-8"></script>
-  <title>Document</title>
+  <title>Snake Game</title>
 </head>
 <body>
+  <div class="grid-wrapper"> 
+<div class="grid"></div>
+  </div>
   
 </body>
 </html>
