Commit plan done for snake moving

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <title>Snake Game</title>
 </head>
 <body>
+  <div class="score"> 
+    score: 
+    <span id="current-score"></span> 
+  </div>
   <div class="grid-wrapper"> 
-<div class="grid"></div>
+    <div class="grid"></div>
   </div>
   
 </body>
