start button added with event listner need to link up to game

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <div class="grid-wrapper"> 
     <div class="grid"></div>
   </div> 
+  <div class="start-button"> <button>Start Game </button></div>
 </body>
 </html>
