css: box is trtansparent and looking better

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <span id="current-score"></span> 
   </div>
   <div class="grid-wrapper"> 
-    <div class="grid"></div>
+    <section class="grid-flex">
+        <div class="grid">
+        </div>
+    </section>
   </div> 
   <div class="start-button"> <button>Start Game </button></div>
 </body>
