css: snake box responsive to the side

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   </div>
   <div class="start-button"> <button>Start Game </button></div>
   <div class="grid-wrapper"> 
-    <section class="grid-flex">
-        <div class="grid">
-        </div>
-    </section>
+    <div id='grid-flex'>
+      <div class="grid">
+      </div>
+    </div>
   </div> 
- 
 </body>
 </html>
