--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   </div>
   <div class="start-button"> <button>Start Game </button></div>
   <div class="grid-wrapper"> 
-    <div id='grid-flex'>
-      <div class="grid">
+    <section id="background-gameboy">
+      <div id='grid-flex'>
+        <div class="grid">
+        </div>
       </div>
-    </div>
+    </section>
   </div> 
 </body>
 </html>
