--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <section id="background-gameboy">
       <div id='grid-flex'>
         <div class="grid">
+          <span id="game-over-span"></span>
         </div>
       </div>
     </section>
@@ -28,4 +29,5 @@
 </section>
 </body>
 <audio id="audio"></audio>
+<audio id="audio2"></audio>
 </html>
