css: game over is working

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div id='grid-flex'>
         <div class="grid">
           <span id="game-over-span"></span>
+          <span id="game-over-pic"></span>
         </div>
       </div>
     </section>
