last entry for 2 thanks Chazza+Noz +jozza

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </div> 
   <section id="flex-button">
   <div class="start-button"> <button>Start Game </button></div>
+  <button id="Refresh">Refresh </button>
   <div class="score"> 
     score: 
     <span id="current-score"></span> 
@@ -31,4 +32,5 @@
 </body>
 <audio id="audio"></audio>
 <audio id="audio2"></audio>
+
 </html>
